# inspection_bringup

./: .gitignore  CMakeLists.txt  NAV_README.md  README.md  package.xml
config/: inspection_deps.repos  navigate.yaml  navigation_deps.repos  services.yaml  system.yaml
launch/: inspection_system.launch.py  navigation.launch.py  platform_bridge.launch.py  sensors.launch.py
scripts/: build_inspection.sh  build_navigation.sh  manage_inspection_services.sh  navigation_supervisor.py  start_inspection_tmux.sh  wait_for_nodes.py  wait_for_ready.py
systemd/: inspection-navigation.service.in  inspection-system.service.in
