<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspection_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for the inspection task system.</description>
  <maintainer email="robot@example.com">Robot Inspection Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>alarm_manager</exec_depend>
  <exec_depend>acoustic_monitor</exec_depend>
  <exec_depend>gas_monitor</exec_depend>
  <exec_depend>gimbal_control_stub</exec_depend>
  <exec_depend>inspection_charge_executor</exec_depend>
  <exec_depend>inspection_interfaces</exec_depend>
  <exec_depend>inspection_platform_bridge</exec_depend>
  <exec_depend>inspection_task_hub</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>faster_lio</exec_depend>
  <exec_depend>gridmapper</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>local_planner</exec_depend>
  <exec_depend>multi_map_nav</exec_depend>
  <exec_depend>nav_bridge</exec_depend>
  <exec_depend>thermal_camera_monitor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
